--- a/Student.DataAccess.Dao/Student.DataAccess.Dao.csproj
+++ b/Student.DataAccess.Dao/Student.DataAccess.Dao.csproj
@@ -57,7 +57,9 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="SQL\StoredProcedures\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="SQL\Create_Table_Alumno.sql" />
   </ItemGroup>
